Bug 314955 - Guidance, please. Ledger 'Enter' button enabled prematurely, and other strangenesses
Summary: Guidance, please. Ledger 'Enter' button enabled prematurely, and other stran...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-12 00:41 UTC by allan
Modified: 2017-07-01 09:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2013-02-12 00:41:34 UTC
Normally, I do not use the Transaction Form, but today I did, and noticed a difference in behaviour compared to direct transaction entry.

Previously, I had noticed that it was possible to enter just an amount, and immediately the Enter button became enabled.  I thought it was a bit odd, but just accepted it as not harmful.  Today, however, when using the transaction form, the Enter button did not then become enabled.

So, I poked about a bit.

When not using, or when using, the transaction form -
1a) Enter a payee. That's OK.
1b) Now enter a single character in the memo.  Enter enabled.
2a) Enter a memo character. That's OK.
2b) Now enter a payee. That's still OK.
2c) Now enter another memo character.  Enter enabled.
3a) Enter an account.    Enter enabled.
4a) Enter a tag.    Enter enabled.

So, apart from the amount field, the two methods seem similar.

Investment entry seems OK.


Reproducible: Always

Steps to Reproduce:
1. as above.
2.
3.
Actual Results:  
as above.

Expected Results:  
The two entry methods should behave similarly, so far as the amount field is concerned.

A payee and a memo don't seem to be sufficient data for a transaction to be accepted.

I wouldn't expect it to be valid to be able to enter a transaction without its quota of fields, although there may be a valid reason to be able to do that.
Comment 1 allan 2013-02-12 14:39:15 UTC
It would be good to know what fields should be regarded as mandatory for transaction entry.  I don't know if some looseness is allowed, because of importing, but then it is quite strictly laid out for investments.

I can see the cause of some of the symptoms I noticed, but don't know where to draw the line.
Comment 2 allan 2013-06-01 16:31:42 UTC
Git commit 94935cf78e0135e2bb0cceff3c0dbde8c1c07e6d by Allan Anderson.
Committed on 06/03/2013 at 23:41.
Pushed by allananderson into branch 'master'.
Related: bug 311481, bug 107714, bug 316111
On entering a new tag, allow dialog to appear asking if I want to accept the
 new tag.

M  +3    -0    kmymoney/dialogs/investactivities.cpp
M  +2    -1    kmymoney/dialogs/keditscheduledlg.cpp
M  +44   -10   kmymoney/dialogs/transactioneditor.cpp
M  +39   -7    kmymoney/widgets/kguiutils.cpp
M  +3    -2    kmymoney/widgets/register.cpp

http://commits.kde.org/kmymoney/94935cf78e0135e2bb0cceff3c0dbde8c1c07e6d
Comment 3 Cristian Oneț 2014-10-18 13:50:48 UTC
Git commit cc7354d043efd0da84f8eee004b7b0c5390422dd by Cristian Oneț.
Committed on 18/10/2014 at 13:42.
Pushed by conet into branch 'master'.

Remove the too harsh transation entering restrictions.

Now a transaction can be entered if at least one of the
following fields payee, category, amount is valid. This
was the old behavior and it seems better to be more
permissive with the user as long as no harm is done.

Attached the commit to the original bug report which seems
invalid since it requests these restrictions.

M  +9    -29   kmymoney/dialogs/transactioneditor.cpp

http://commits.kde.org/kmymoney/cc7354d043efd0da84f8eee004b7b0c5390422dd
Comment 4 Cristian Oneț 2014-10-18 13:51:25 UTC
Git commit e3b4e55b2fcf9ad36ae5a397fe9f016d4a480039 by Cristian Oneț.
Committed on 18/10/2014 at 13:42.
Pushed by conet into branch '4.7'.

Remove the too harsh transation entering restrictions.

Now a transaction can be entered if at least one of the
following fields payee, category, amount is valid. This
was the old behavior and it seems better to be more
permissive with the user as long as no harm is done.

Attached the commit to the original bug report which seems
invalid since it requests these restrictions.
(cherry picked from commit cc7354d043efd0da84f8eee004b7b0c5390422dd)

M  +9    -29   kmymoney/dialogs/transactioneditor.cpp

http://commits.kde.org/kmymoney/e3b4e55b2fcf9ad36ae5a397fe9f016d4a480039